welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: type mismatch;
 found   : Unit
 required: Int
  	if (Math.max(a,b)>=10 && Math.max(a,b)<=20){
        ^